@@ -29,13 +29,7 @@
 </div>
 </div><!-- #container -->
 
-<?php
-   /* Always have wp_footer() just before the closing </body>
-    * tag of your theme, or you will break many plugins, which
-    * generally use this hook to reference JavaScript files.
-    */
-    wp_footer();
-?>
+<?php wp_footer(); ?>
 
 </body>
 </html>
