@@ -1,7 +1,13 @@
 CHANGELOG
 =========
 
-Changelog:
+DarkElements version 3.1 - december 2015
+- file functions: removed register_default_headers (default header already included in after_setup_theme)
+- several files: updated postmetadata
+- file style: several modifications
+- several small adjustments
+- updated pot file
+
 DarkElements version 3.0 - november 2015
 - updated archive.php (added the_archive_title and the_archive_description)
 - updated pot file
